--- a/package.json
+++ b/package.json
@@ -10,7 +10,9 @@
   "dependencies": {
     "@kichiyaki/react-native-barcode-generator": "^0.6.7",
     "@react-native-async-storage/async-storage": "^1.15.11",
+    "@react-native-community/datetimepicker": "^5.1.0",
     "@react-native-community/netinfo": "^7.1.2",
+    "@react-native-picker/picker": "2.1.0",
     "@react-navigation/bottom-tabs": "^6.0.9",
     "@react-navigation/native": "^6.0.6",
     "@react-navigation/native-stack": "^6.2.5",
@@ -22,6 +24,7 @@
     "react-dom": "17.0.1",
     "react-native": "0.64.2",
     "react-native-cookies": "^3.3.0",
+    "react-native-date-picker": "^4.1.3",
     "react-native-elements": "^3.4.2",
     "react-native-qrcode-svg": "^6.1.1",
     "react-native-safe-area-context": "^3.3.2",
