--- a/package.json
+++ b/package.json
@@ -20,9 +20,10 @@
     "dotenv": "^10.0.0",
     "expo": "~43.0.0",
     "expo-status-bar": "~1.1.0",
+    "link": "^0.1.5",
     "react": "17.0.1",
     "react-dom": "17.0.1",
-    "react-native": "0.64.2",
+    "react-native": "^0.64.2",
     "react-native-cookies": "^3.3.0",
     "react-native-date-picker": "^4.1.3",
     "react-native-elements": "^3.4.2",
@@ -30,6 +31,7 @@
     "react-native-safe-area-context": "^3.3.2",
     "react-native-screens": "^3.8.0",
     "react-native-svg": "^12.1.1",
+    "react-native-vector-icons": "^9.0.0",
     "react-native-web": "0.17.1",
     "shortid": "^2.2.16",
     "socket.io-client": "^4.3.2"
